--- a/config/gatorgrade.yml
+++ b/config/gatorgrade.yml
@@ -19,6 +19,23 @@
 
 
 # check the technical writing for various characteristics
+- writing/reflection.md:
+    - description: Ensure that writing/reflection.md file exists
+      check: ConfirmFileExists
+    - description: Complete all TODOs and remove the TODO markers in the File writing/reflection.md
+      check: MatchFileFragment
+      options:
+        fragment: TODO
+        count: 0
+        exact: true
+    - description: Delete the 'Add Your Name Here' prompt in the File writing/reflection.md
+      check: MatchFileFragment
+      options:
+        fragment: "Add Your Name Here"
+        count: 0
+        exact: true
+
+# check the technical writing for various characteristics
 - src/proteinDB_build.txt:
     - description: Ensure that src/proteinDB_build.txt file exists
       check: ConfirmFileExists
@@ -34,7 +51,6 @@
         fragment: "Add Your Name Here"
         count: 0
         exact: true
-
 
 
 # --> check that the number of commits in the Git repository is beyond a threshold
